--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.png' %}" >
     <title>{% block title %}{% endblock title %} | Red Zone</title>
 </head>
 <body>
