--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -1,6 +1,28 @@
 {% extends 'base.html' %}
+{% load static %}
+
+
+{% block title %}
+    Home
+{% endblock title %}
+
 
 
 {% block content %}
-    <h1>it works!</h1>
-{% endblock content %}
+<!--     <slider-l layout="gap:2">
+        <img src="{% static 'img/bikers/president_card.png' %}" alt="President's Card">
+        <img src="{% static 'img/bikers/barnes_card.png' %}" alt="Barnes' Card">
+        <img src="{% static 'img/bikers/dex_card.png' %}" alt="Dexter's Card">
+        <img src="{% static 'img/bikers/elias_card.png' %}" alt="Elias's Card">
+        <img src="{% static 'img/bikers/fonfi_card.png' %}" alt="Fonfi's Card">
+        <img src="{% static 'img/bikers/ndj_card.png' %}" alt="NDJ's Card">
+        <img src="{% static 'img/bikers/momo_card.png' %}" alt="Momo's Card">
+        <img src="{% static 'img/bikers/sky_card.png' %}" alt="Sky's Card">
+        <img src="{% static 'img/bikers/komak_card.png' %}" alt="Komak's Card">
+        <img src="{% static 'img/bikers/junior_card.png' %}" alt="Junior's Card">
+        <img src="{% static 'img/bikers/pinot_card.png' %}" alt="Pinot's Card">
+        <img src="{% static 'img/bikers/kaki_card.png' %}" alt="Kaki's Card">
+        <img src="{% static 'img/bikers/vom_card.png' %}" alt="Very Old Man's Card">
+        <img src="{% static 'img/bikers/couz_card.png' %}" alt="Couz's Card">
+    </slider-l>
+ -->{% endblock content %}
