--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.png' %}" >
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>{% block title %}{% endblock title %} | Red Zone</title>
+    <script src="{% static 'js/htmx.min.js' %}"></script>
 </head>
 <body>
     <header>
