--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -9,20 +9,38 @@
 
 
 {% block content %}
-<!--     <slider-l layout="gap:2">
-        <img src="{% static 'img/bikers/president_card.png' %}" alt="President's Card">
-        <img src="{% static 'img/bikers/barnes_card.png' %}" alt="Barnes' Card">
-        <img src="{% static 'img/bikers/dex_card.png' %}" alt="Dexter's Card">
-        <img src="{% static 'img/bikers/elias_card.png' %}" alt="Elias's Card">
-        <img src="{% static 'img/bikers/fonfi_card.png' %}" alt="Fonfi's Card">
-        <img src="{% static 'img/bikers/ndj_card.png' %}" alt="NDJ's Card">
-        <img src="{% static 'img/bikers/momo_card.png' %}" alt="Momo's Card">
-        <img src="{% static 'img/bikers/sky_card.png' %}" alt="Sky's Card">
-        <img src="{% static 'img/bikers/komak_card.png' %}" alt="Komak's Card">
-        <img src="{% static 'img/bikers/junior_card.png' %}" alt="Junior's Card">
-        <img src="{% static 'img/bikers/pinot_card.png' %}" alt="Pinot's Card">
-        <img src="{% static 'img/bikers/kaki_card.png' %}" alt="Kaki's Card">
-        <img src="{% static 'img/bikers/vom_card.png' %}" alt="Very Old Man's Card">
-        <img src="{% static 'img/bikers/couz_card.png' %}" alt="Couz's Card">
-    </slider-l>
- -->{% endblock content %}
+        <div class="carousel-container" x-data="carousel()">
+            <button class="carousel-button carousel-button-prev" @click="prev()">
+                <svg width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M15 18l-6-6 6-6"/>
+                </svg>
+            </button>
+
+            <div class="carousel-wrapper" x-ref="wrapper">
+                <div class="carousel-track"
+                     x-ref="track"
+                     @mousedown="handleMouseDown($event)"
+                     @mousemove="handleMouseMove($event)"
+                     @mouseup="handleMouseUp($event)"
+                     @mouseleave="handleMouseUp($event)"
+                     @touchstart="handleTouchStart($event)"
+                     @touchmove="handleTouchMove($event)"
+                     @touchend="handleTouchEnd($event)">
+                    {% for image in bikers_images %}
+                    <div class="card">
+                        <img src="{% static image %}" alt="Biker {{ forloop.counter }}" class="card-image">
+                        <div class="card-overlay">
+<!--                             <h3 class="card-title">Membre #{{ forloop.counter }}</h3>
+ -->                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+
+            <button class="carousel-button carousel-button-next" @click="next()">
+                <svg width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M9 18l6-6-6-6"/>
+                </svg>
+            </button>
+        </div>
+{% endblock content %}
