--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <!--  Header sticky  -->
     <header class="sticky-header">
         <div class="header-content">
-            <h1 class="logo">LOGO</h1>
+            <a href="http://redzoneteam.ch" target="_self"><img src="{% static 'img/logo_redzone.png' %}" alt="Logo Red Zone"></a>
             <nav class="menu">
                 <a href="{% url 'home' %}" class="menu-item active">Home</a>
                 <a href="{% url 'gallery' %}" class="menu-item">Gallery</a>
