--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,23 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.png' %}" >
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.png' %}" />
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     <title>{% block title %}{% endblock title %} | Red Zone</title>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <script src="{% static 'js/carousel.js' %}"></script>
 </head>
+
 <body>
     <!--  Header sticky  -->
     <header class="sticky-header">
         <div class="header-content">
-            <a href="http://redzoneteam.ch" target="_self"><img src="{% static 'img/logo_redzone.png' %}" alt="Logo Red Zone"></a>
+            <a href="http://redzoneteam.ch" target="_self"><img src="{% static 'img/logo_redzone.png' %}"
+                    alt="Logo Red Zone" /></a>
             <nav class="menu">
                 <a href="{% url 'home' %}" class="menu-item active">Home</a>
                 <a href="{% url 'gallery' %}" class="menu-item">Gallery</a>
@@ -24,11 +27,8 @@
     </header>
 
     <main class="main-content">
-
-        {% block content %}
-
-        {% endblock content %}
-
+        {% block content %} {% endblock content %}
     </main>
 </body>
+
 </html>
