--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -36,6 +36,11 @@ body {
   font-family: 'LivingHell';
   src: url('../font/Living_Hell.ttf') format('truetype');
 }
+
+@font-face {
+    font-family: 'Tarantino';
+    src: url('../font/Tarantino.ttf') format('truetype');
+}
 /* END GENERAL */
 
 /* HEADER */
@@ -188,13 +193,14 @@ body {
 
 .card-back-title {
     color: #ff0000;
-    font-size: 2.5rem;
-    font-weight: bold;
+    font-family: 'Tarantino', sans-serif;
     text-transform: uppercase;
-    letter-spacing: 3px;
+    font-size: 1.8quitrem;
     margin-bottom: 2rem;
+    letter-spacing: 2px;
+/*     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-}
+ */}
 
 .card-back-text {
     color: #ff0000;
