--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,7 +41,13 @@ body {
     font-family: 'Tarantino';
     src: url('../font/Tarantino.ttf') format('truetype');
 }
+
+.title {
+    padding: 40px 0 40px 0;
+}
+
 /* END GENERAL */
+
 
 /* HEADER */
 
@@ -51,11 +57,8 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.95);
-/*     border-bottom: 2px solid #ff0000;
- */    z-index: 1000;
-/*     backdrop-filter: blur(10px);
- */}
+    height: 196px;
+}
 
 .header-content {
     display: flex;
@@ -106,11 +109,9 @@ body {
 
 /* Section principale */
 .main-content {
-    margin-top: 150px;
-    height: calc(100vh - 150px);
+    margin-top: 196px;
+    height: calc(100vh - 196px);
     display: flex;
-    align-items: center;
-    padding: 80px;
     box-sizing: border-box;
 }
 
@@ -121,8 +122,6 @@ body {
     height: 100%;
     display: flex;
     align-items: center;
-    /* Permettre le débordement vertical pour l'ombre */
-    overflow: visible;
 }
 .carousel-wrapper {
     overflow: hidden;
@@ -157,10 +156,7 @@ body {
     flex-shrink: 0;
     position: relative;
     perspective: 1000px;
-/*     background-color: #1a1a1a;
-    border: 1px solid #ff0000;
-    border-radius: 50px;
- */    overflow: hidden;
+    overflow: hidden;
     position: relative;
     transition: opacity 0.3s ease, box-shadow 0.3s ease;
     opacity: 0.8;
@@ -195,12 +191,10 @@ body {
     color: #ff0000;
     font-family: 'Tarantino', sans-serif;
     text-transform: uppercase;
-    font-size: 1.8quitrem;
+    font-size: 1.8rem;
     margin-bottom: 2rem;
     letter-spacing: 2px;
-/*     font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
- */}
+}
 
 .card-back-text {
     color: #ff0000;
@@ -221,8 +215,7 @@ body {
 
 .card:hover {
     opacity: 1;
-/*     box-shadow: 10px 10px 20px 0 rgba(58, 58, 58, 0.6);
- */}
+}
 
 .card-front,
 .card-back {
@@ -231,11 +224,8 @@ body {
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-/*     border: 1px solid #ff0000;
-    border-radius: 50px;
- */    overflow: hidden;
-/*     background-color: #1a1a1a;
- */}
+    overflow: hidden;
+}
 
 .card-front {
     z-index: 2;
@@ -263,8 +253,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-/*     opacity: 0.3;
- */}
+}
 
 .card-overlay {
     position: absolute;
@@ -328,6 +317,73 @@ body {
     width: 35px;
     height: 35px;
 }
+
+/* RED ZONE */
+.container-redzone {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin: 50px auto 0 auto;
+}
+
+.form-redzone {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 60%;
+}
+
+.form-row-redzone {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 50%;
+    padding: 20px;
+}
+
+.label-redzone {
+}
+
+.input-redzone {
+    padding: 5px;
+    width: 50%;
+    height: 1.9rem;
+    border: 1px solid #ff0000;
+    border-radius: 5%;
+    background-color: #1f1f1f;
+    color: #ff0000;
+}
+
+.button-redzone {
+    background-color: #ff0000; /* Rouge intense */
+    color: #ffffff; /* Texte blanc */
+    border: 2px solid #ff0000; /* Bordure rouge */
+    border-radius: 5px; /* Coins légèrement arrondis */
+    margin-top: 20px;
+    padding: 10px 20px; /* Plus de confort */
+    font-size: 1rem; /* Taille lisible */
+    font-weight: bold; /* Pour un texte un peu plus marqué */
+    cursor: pointer; /* Indique qu'il est cliquable */
+    transition: all 0.3s ease; /* Animation douce pour hover/focus */
+}
+
+.button-redzone:hover {
+    background-color: #1f1f1f; /* Passe au noir au survol */
+    color: #ff0000; /* Texte rouge */
+    border: 2px solid #ff0000; /* Bordure reste rouge */
+}
+
+.button-redzone:active {
+    transform: scale(0.95); /* Ajout d'un effet de clic */
+}
+
+.button-redzone:focus {
+    outline: none; /* Supprime l'effet focus par défaut */
+    box-shadow: 0 0 10px #ff0000; /* Ajoute un halo rouge */
+}
+
 
 /* Responsive - Tablette */
 @media (max-width: 1024px) {
