--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
 {% block title %}
     Home
 {% endblock title %}
 
+
+{% block home_active %}
+    active
+{% endblock home_active %}
 
 
 {% block content %}
