--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -33,8 +33,8 @@ body {
 }
 
 @font-face {
-  font-family: 'LivingHell';
-  src: url('../font/Living_Hell.ttf') format('truetype');
+  font-family: 'Nosifer';
+  src: url('../font/Nosifer-Regular.ttf') format('truetype');
 }
 
 @font-face {
@@ -182,18 +182,16 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
 }
 
 .card-back-title {
     color: #ff0000;
-    font-family: 'Tarantino', sans-serif;
+    font-family: 'Nosifer', sans-serif;
     text-transform: uppercase;
-    font-size: 1.8rem;
+    font-size: 2.2rem;
     margin-bottom: 2rem;
-    letter-spacing: 2px;
 }
 
 .card-back-text {
