DB fields corrections

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -54,7 +54,7 @@ body {
 
 .title {
     padding: 40px 0 40px 0;
-    font-family: 'Poppind-medium', sans-serif;
+    font-family: 'Poppins-medium', sans-serif;
 }
 
 /* END GENERAL */
