--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -197,20 +197,30 @@ body {
     text-align: center;
 }
 
-.card-back-title {
-    color: #ff0000;
+.card-back-title, .card-back-subtitle {
     font-family: 'Nosifer', sans-serif;
     text-transform: uppercase;
+}
+
+.card-back-title {
     font-size: 2.2rem;
-    margin-bottom: 2rem;
+}
+
+.card-back-subtitle {
+    font-size: 1.8rem;
+}
+
+.aka {
+    font-family: 'Poppins-medium', sans-serif;
+    font-size: 1.3rem;
+    text-transform: lowercase;
 }
 
 .card-back-text {
-    color: #ff0000;
+    margin-top: 30px;
     font-size: 1.2rem;
     line-height: 1.6;
     max-width: 80%;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 }
 
 
@@ -277,15 +287,6 @@ body {
     padding: 4rem 1.5rem 2rem;
 }
 
-.card-title {
-    color: #ff0000;
-    font-size: 2rem;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.9);
-    font-weight: bold;
-}
 
 /* Boutons du carrousel */
 .carousel-button {
