--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
     <main class="main-content">
         {% block content %} {% endblock content %}
     </main>
+    <footer>
+        <div>© {% now "Y" %} Red Zone Team | all rights reserved | designed and build by puco with ❤️</div>
+    </footer>
 </body>
 
 </html>
